--- a/public/register.html
+++ b/public/register.html
@@ -59,8 +59,8 @@
         <div class="w-1/2 h-full bg-white rounded-r-lg">
           <form class="w-full flex flex-col justify-center text-black items-center" action="/register_individual" method="POST" id="registrationForm">
             <div class="pl-5 pt-5 pr-5 w-full">
-              <label for="donor_name" class="block font-bold text-md text-xs">Donor Name</label>
-              <input type="text" id="donor_name" name="donor_name" class="w-full px-4 py-0.2 bg-gray-100 border border-gray-300 rounded-md focus:outline-none" required />
+              <label for="name" class="block font-bold text-md text-xs">Donor Name</label>
+              <input type="text" id="name" name="name" class="w-full px-4 py-0.2 bg-gray-100 border border-gray-300 rounded-md focus:outline-none" required />
             </div>
             <div class="pl-5 pr-5 pt-4 w-full">
               <label for="email_id" class="block font-bold text-xs">Email ID</label>
