--- a/public/admin.html
+++ b/public/admin.html
@@ -10,7 +10,7 @@
     <div class="container mx-auto p-0">
       <div class="grid grid-cols-1 md:grid-cols-5 gap-0">
         <!-- Left Sidebar -->
-        <div class="col-span-1 md:col-span-1 h-full bg-white border border-text-slate-400 rounded-md shadow-md">
+        <div class="col-span-1 md:col-span-1 h-full bg-white rounded-md shadow-md">
           <!-- Left Sidebar Upper Section -->
           <div class="p-4 h-60 w-full">
             <h1 class="text-slate-800 font-bold text-sm text-center">
@@ -23,12 +23,12 @@
           <!-- Left Sidebar Upper Section -->
   
           <!-- Left Sidebar Bottom Section -->
-          <div class="p-4 h-fit hidden md:block">
+          <div class="p-4 h-fit hidden md:block mb-20">
             <ul class="space-y-2 text-slate-700 text-sm">
-              <li class="border-b hover:rounded-lg pl-2 border-gray-400 cursor-pointer pt-2 pb-2 hover:bg-indigo-100 font-semibold">
+              <li class="border-b rounded-lg pl-2 border-400 cursor-pointer pt-2 pb-2 bg-indigo-100 font-bold">
                 <a href="http://localhost:8000/prayaas/admin">Dashboard</a>
               </li>
-              <li class="border-b rounded-lg pl-2 border-gray-400 cursor-pointer pt-2 pb-2 bg-indigo-100 font-bold">
+              <li class="border-b rounded-lg pl-2 border-gray-400 cursor-pointer pt-2 pb-2 hover:bg-indigo-100 font-semibold">
                 <a href="http://localhost:8000/prayaas/usersInfo">User Management</a>
               </li>
               <li class="border-b hover:rounded-lg pl-2 border-gray-400 cursor-pointer pt-2 pb-2 hover:bg-indigo-100 font-semibold">
@@ -65,7 +65,7 @@
             class="bg-white h-16 flex justify-center items-center border border-b-2"
           >
             <h1 class="text-slate-900 font-semibold">
-              PRAYASS-NGO-ADMIN_TERMINAL <span>&copy;</span>2024 ALL RIGHTS
+              PRAYAAS-NGO-ADMIN_TERMINAL <span>&copy;</span>2024 ALL RIGHTS
               RESERVED
             </h1>
           </div>
@@ -168,21 +168,6 @@
             </div>
           </div>
 
-          <!-- scrolable-view-area -->
-          <div
-            class="h-[460px] m-2 bg-blue-100 row3cards rounded-md flex justify-center items-start "
-          >
-            <div class="w-8/12 h-10 bg-white mt-2 rounded-md">
-              <input
-                class="pl-5 font-semibold w-full border-none h-10 flex justify-center items-center"
-                type="search"
-                name=""
-                id=""
-                placeholder="search"
-              />
-            </div>
-          </div>
-          <!-- scrolable-view-area -->
         </div>
         <!-- Main Window -->
       </div>
