--- a/public/ngo.html
+++ b/public/ngo.html
@@ -15,6 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="shortcut icon" href="img/don/salary.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
@@ -410,11 +411,11 @@ footer .social a img{
                     </div>
                     <div class="col-lg-6">
                         <div class="social">
-                            <a href="#"><img src="/views/img/icons/facebook.png" alt="facebook"></a>
-                            <a href="#"><img src="/img/icons/instagram.png" alt="inatagram"></a>
-                            <a href="#"><img src="/img/icons/youtube.png" alt="youtube"></a>
-                            <a href="#"><img src="/img/icons/linkedin.png" alt="linkedin"></a>
-                            <a href="#"><img src="/img/icons/gmail.png" alt="gnail"></a>
+                            <a href="#"><i style="color: black;font-size: 20px;padding-left: 2px;" class="fab fa-facebook"></i></a> 
+                            <a href="#"><i style="color: black;font-size: 20px;padding-left: 2px;" class="fab fa-instagram"></i></a>
+                            <a href="#"><i style="color: black;font-size: 20px;padding-left: 2px;" class="fab fa-youtube"></i></a>
+                            <a href="#"><i style="color: black;font-size: 20px;padding-left: 2px;" class="fab fa-linkedin"></i></a>
+                            <a href="#"><i style="color: black;font-size: 20px;padding-left: 2px;" class="far fa-envelope"></i></a>
                         </div>
                     </div>
                 </div>
@@ -430,8 +431,8 @@ footer .social a img{
                     <div class="col-lg-6 align-item-center">
                         <div class="home-info">
                             <h1>Alone we can do little, together we can do so much</h1>
-                            <h2>We <span>MAB CORP foundation</span> manage wastage for needy peoples</h2>
-                            <p>Make a difference today: donate to MAB CORP and help improve lives.</p>
+                            <h2 style="font-size: 22px;">We <span>Prayaas foundation</span> help the needy and poor people with essential items</h2>
+                            <p>Make a difference today: donate to <span style="font-weight: 600;color: #de5169;">@prayaas_ngo</span> and help improve lives.</p>
                             <div class="buttons">
                                 <a href="http://localhost:8000/prayaas/register" class="btn1">Register</a>
                                 <a href="http://localhost:8000/prayaas/registerOrg" class="btn1">Register As Org</a>
@@ -515,7 +516,7 @@ footer .social a img{
             </div>
             <div class="gallery-sec">
                 <div class="image-container">
-                    <div class="image"><img src="img/miss/1.jpg" alt="img"></div>
+                    <div class="image"><i class="fa-brands fa-facebook"></i></div>
                     <div class="image"><img src="img/miss/2.jpg" alt="img"></div>
                     <div class="image"><img src="img/miss/3.jpg" alt="img"></div>
                     <div class="image"><img src="img/miss/4.jpg" alt="img"></div>
@@ -624,10 +625,10 @@ footer .social a img{
                         <h4>Important Links</h4>
                         <ul>
                             <li><a href="#home">Home</a></li>
-                            <li><a href="#donation">Donations</a></li>
-                            <li><a href="#mission-id">Missions</a></li>
-                            <li><a href="#about">About us</a></li>
-                            <li><a href="#contact">Contact us</a></li>
+                            <li><a href="#donation">Dashboard</a></li>
+                            <li><a href="#Blogs">Blogs</a></li>
+                            <li><a href="#Request">Request</a></li>
+                            <li><a href="#about">About</a></li>
                         </ul>
                     </div>
                 </div>
@@ -635,11 +636,11 @@ footer .social a img{
                     <div class="col-one">
                         <h4>Social Media</h4>
                         <div class="social">
-                            <a href="#"><img src="img/icons/facebook.png" alt="facebook"></a>
-                            <a href="#"><img src="img/icons/instagram.png" alt="inatagram"></a>
-                            <a href="#"><img src="img/icons/youtube.png" alt="youtube"></a>
-                            <a href="#"><img src="img/icons/linkedin.png" alt="linkedin"></a>
-                            <a href="#"><img src="img/icons/gmail.png" alt="gnail"></a>
+                            <a href="#"><i style="color: white;font-size: 20px;padding-left: 2px;" class="fab fa-facebook"></i></a> 
+                            <a href="#"><i style="color: white;font-size: 20px;padding-left: 2px;" class="fab fa-instagram"></i></a>
+                            <a href="#"><i style="color: white;font-size: 20px;padding-left: 2px;" class="fab fa-youtube"></i></a>
+                            <a href="#"><i style="color: white;font-size: 20px;padding-left: 2px;" class="fab fa-linkedin"></i></a>
+                            <a href="#"><i style="color: white;font-size: 20px;padding-left: 2px;" class="far fa-envelope"></i></a>
                         </div>
                         <p>Copyright &copy; 2024 | All Right Reserved</p>
                     </div>
