--- a/public/register.html
+++ b/public/register.html
@@ -12,13 +12,8 @@
       rel="stylesheet"
     />
     <style>
-      .backimage1 {
-        background-image: url("https://i.pinimg.com/564x/d5/88/03/d588033ab480acc85534e3e9a9306b7f.jpg");
-        background-size: cover;
-        backdrop-filter: blur(20px);
-      }
       .backimage {
-        background-image: url("https://i.pinimg.com/736x/2d/d9/b7/2dd9b75d1687053ae4a8f017ee1fd2a5.jpg");
+        background-image: url("https://i.pinimg.com/564x/b4/d7/c7/b4d7c745521e0469de2fe08e902e0965.jpg");
         background-size: cover;
 
         backdrop-filter: blur(20px);
@@ -29,54 +24,43 @@
       
     </style>
   </head>
-  <body class="w-full h-screen bg-white flex justify-center items-center backimage1">
+  <body class="w-full h-screen bg-white flex justify-center items-center">
     <div class="w-full h-full flex justify-center items-center">
-      
-      <div class="w-6/12 h-3/5 bg-zinc-100 flex border border-slate-300 rounded-xl ">
-        <div class="w-6/12 h-full bg-white rounded-lg">
+      <div class="w-full h-full  flex justify-center items-center flex-col">
+
+        <div class="w-full h-fit flex justify-center items-center flex-col mb-5">
+          <h1 class="font-bold text-slate-800 text-2xl">Prayaas Foundation</h1>
+          <h1 class="font-semibold text-slate-700 text-md">Alone we can do little, together we can do so much</h1>
+          <h1 class="font-semibold bg-indigo-400 text-white px-2 py-1 rounded-sm tracing-tighter text-2xl mt-10">Register as Individual</h1>
+        </div>
+
+      <div class="w-7/12 h-3/5 bg-white flex rounded-xl ">
+        <div class="w-3/5 h-full bg-white rounded-lg flex justify-center items-center mr-10">
           <div class="backimage w-full h-full flex flex-col rounded-l-lg justify-start items-center">
-            <a href="http://localhost:8000/prayaas/home">
-              <h1 class="text-black font-bold text-2xl tracing-tighter mt-24">
-                Prayaas NGO
-              </h1>
-            </a>
-            <h1 class="text-slate-800 font-bold text-md pb-10 tracing-tighter">
-              एक कोशिश अपनों के साथ अपनों के लिए
-            </h1>
-            <h1 class="text-slate-800 font-bold text-lg">Register As</h1>
-            <h1 class="text-black font-semibold text-4xl">Individual</h1>
-            <a
-              href="http://localhost:8000/prayaas/login"
-              class="text-gray-900 font-bold text-xs mt-3 hover:text-gray-700 transition duration-300"
-              >Already Have An Account?
-              <span class="text-blue-600">Login</span></a>
-              <div class="bg-slate-100 rounded-md px-1 border border-slate-200 cursor-pointer text-sm font-bold mt-5">
-                <a href="http://localhost:8000/prayaas/home">Home</a>
-              </div>
           </div>
         </div>
         <!-- INPUT FIELDS-CONTAINER -->
-        <div class="w-1/2 h-full bg-white rounded-r-lg">
+        <div class="w-2/5 h-full bg-white rounded-r-lg">
           <form class="w-full flex flex-col justify-center text-black items-center" action="/register_individual" method="POST" id="registrationForm">
             <div class="pl-5 pt-5 pr-5 w-full">
               <label for="name" class="block font-bold text-md text-xs">Donor Name</label>
-              <input type="text" id="name" name="name" class="w-full px-4 py-0.2 bg-gray-100 border border-gray-300 rounded-md focus:outline-none" required />
+              <input type="text" id="name" name="name" class="w-full px-4 py-0.2 bg-indigo-100 rounded-md focus:outline-none" required />
             </div>
             <div class="pl-5 pr-5 pt-4 w-full">
               <label for="email_id" class="block font-bold text-xs">Email ID</label>
-              <input type="email" id="email_id" name="email_id" class="w-full px-4 py-0.2 bg-gray-100 border border-gray-300 rounded-md focus:outline-none" required />
+              <input type="email" id="email_id" name="email_id" class="w-full px-4 py-0.2 bg-indigo-100 rounded-md focus:outline-none" required />
             </div>
             <div class="pl-5 pr-5 pt-4 w-full">
-              <label for="mobile_no" class="block text-xs font-bold">Contact Number</label>
-              <input type="tel" id="mobile_no" name="mobile_no" class="w-full px-4 py-0.2 bg-gray-100 border border-gray-300 rounded-md focus:outline-none" required />
+              <label for="mobile_no" class="block text-xs font-bold">Contact</label>
+              <input type="tel" id="mobile_no" name="mobile_no" class="w-full px-4 py-0.2 bg-indigo-100 rounded-md focus:outline-none" required />
             </div>
             <div class="flex w-full">
               <div class="pl-5 pr-5 pt-4 w-full">
                 <label for="dob" class="block font-bold text-xs">Date of birth</label>
-                <input type="date" id="dob" name="dob" class="w-full px-4 py-0.2 bg-gray-100 border border-gray-300 rounded-md focus:outline-none text-xs font-semibold" required />
+                <input type="date" id="dob" name="dob" class="w-full px-4 py-0.5 bg-indigo-100 rounded-md focus:outline-none text-xs font-semibold" required />
               </div>
               <div class="w-full mt-9">
-                <input type="radio" id="male" name="gender"  value="male" />
+                <input type="radio" id="male" name="gender" value="male" />
                 <label for="male" class="text-xs font-semibold" >Male</label>
                 <input type="radio" id="female" name="gender"  value="female" />
                 <label for="female" class="text-xs font-semibold">Female</label>
@@ -84,16 +68,23 @@
             </div>
             <div class="pl-5 pr-5 pt-4 w-full">
               <label for="address" class="block font-bold text-xs ">Address</label>
-              <input type="text" id="address" name="address" class="w-full px-4 py-0.2 bg-gray-100 border border-gray-300 rounded-md focus:outline-none" required />
+              <input type="text" id="address" name="address" class="w-full px-4 py-0.2 bg-indigo-100 rounded-md focus:outline-none" required />
             </div>
             <div class="pl-5 pt-4 pb-2 pr-5 w-full">
               <label for="password" class="block  font-bold text-xs">Password</label>
-              <input type="password" id="password" name="password" class="w-full px-4 py-0.2 bg-gray-100 border border-gray-300 rounded-md focus:outline-none" required />
+              <input type="password" id="password" name="password" class="w-full px-4 py-0.2 bg-indigo-100 rounded-md focus:outline-none" required />
             </div>
-            <button type="submit" class="w-fit bg-blue-500 py-0 px-2 text-white font-semibold rounded-md hover:bg-blue-600 transition duration-300">Register</button>
+            <button type="submit" class="mt-2 w-fit bg-indigo-500 py-0.5 px-2 text-white font-semibold rounded-md hover:bg-blue-600 transition duration-300">Register</button>
           </form>
+          <div class="w-full h-fit mt-1 flex justify-center items-center">
+            <a href="http://localhost:8000/prayaas/home" class="bg-indigo-400 text-white rounded-sm px-1 mr-2 text-sm">Home</a>
+            <h1 class="font-semibold text-sm">Already have an account? 
+              <span class="font-bold text-blue-500">Login</span></h1>
+          </div>
         </div>
       </div>
+    </div>
+
     </div>
   </body>
 </html>
