--- a/public/ngo.html
+++ b/public/ngo.html
@@ -394,9 +394,6 @@ footer .social a img{
                             <li class="nav-item">
                                 <a class="nav-link" href="#about" style="color: black;font-weight: 600">About</a>
                             </li>
-                            <li class="">
-                                <a class="nav-link" href="http://localhost:8000/prayaas/admin" style="background-color: #303054; border-radius: 10px; color: rgb(255, 255, 255);font-weight: 600">Admin</a>
-                            </li>
                         </ul>
                     </div>
                 </nav>
@@ -618,6 +615,7 @@ footer .social a img{
                             <li><a href="#Blogs">Blogs</a></li>
                             <li><a href="#Request">Request</a></li>
                             <li><a href="#about">About</a></li>
+                            <li><a href="http://localhost:8000/prayaas/admin/login" style="background-color: #d7d7de;padding: 2px; color: rgb(0, 0, 0);font-weight: 600">Admin</a></li>
                         </ul>
                     </div>
                 </div>
