--- a/public/registerOrg.html
+++ b/public/registerOrg.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
     <style>
+      body {
+            font-family: 'Poppins', sans-serif;
+        }
       .backimage {
         background-image: url("https://i.pinimg.com/564x/d8/8f/a4/d88fa43aa79db7dfd147f459b4c71d00.jpg");
         background-size: cover;
